# reranking-practice

./: README.md  pyproject.toml
READMEs/: 1_create_a_db_index.md  2_seed_the_vector_db.md
raw_data/: Automate_Deployments_to_GCP_Cloud_Run_with_GitHub_Actions_kZYsoav104w.md  Build_a_private_RAG_Assistant_with_CrewAI_Ollama_and_AgentOps_MDb81aT0V4w.md  Code_a_D3_js_timeline_with_React_plus_Typescript_A8T3KghaipA.md  Code_an_OpenAI_integration_with_Python_and_Flask_Vo1_9-qVCM4.md  Development_or_Dev_Containers_in_5_minutes-Un2Nw00oL2s.md  How_to_deploy_a_dockerized_FastAPI_to_Cloud_Run_DQwAX5pS4E8.md  How_to_run_DeepSeek_AI models_on_a_Laptop_kE_bBML0xW0.md  How_to_set_up_Llama_Stack_in_14_minutes_KCZSQIX5ET8.md  How_to_use_a_vector_database_Node.js_Chroma_OpenAI_OYPWf5bWrrU.md  Intro_to_Ollama_Llama_Stack_and_AgentOps_9wDq_9d0kbM.md  Mastering_AI_Video_Automation_with_JSON2Video_and_Make.com_YXOC5Is1AqI.md  Performance_Testing_Fastify_vs_Express-7TUZjl-hjro.md  The_Fundamentals_of_CrewAI_and_AgentOps_X1tH1LKs9M0.md  Understanding_RAG_Agents_with_Pinecone_and_LangChain_bsVrSenBmn0.md  What_is_Ollama_glkQIUTCAK4.md  react-i18next_in_8_minutes_3BPM_M4gGso.md
scripts/: README.md  compare_search_methods.py  delete_pinecone_index.py  example_usage.py  hello.py  insert_into_pinecone.py  markdown_processor.py  process_markdown_files.py  search_pinecone.py  search_with_pinecone_reranking.py  search_with_reranking.py  test_small_insert.py
